<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">華文News</string>
    <string name="action_settings">設定</string>
    <string name="open_browser">開啟瀏覽器</string>
    <string name="share">分享</string>
    <string name="setting">設定</string>
    <string name="about">關於</string>
    <string name="suggest">建議與評價</string>
    <string name="license">本軟件提供各大網站新聞資訊服務，新聞圖片與新聞文字內容，其著作權與版權皆屬該新聞網站所有</string>
    <string name="quit_tip">再按一次退出</string>

    <!-- Tab -->
    <string name="tab_tw">台灣</string>
    <string name="tab_hk">香港</string>
    <string name="tab_sg">星馬</string>

    <string name="sharing_description">將內容分享到應用程式</string>

    <!-- Preference -->
    <string name="preference_content_group">新聞內文</string>
    <string name="preference_content_font_size">設定文字大小</string>
    <string name="preference_content_font_size_summary">設定新聞內文的文字大小</string>
    <string name="preference_content_font_color">設定文字顏色</string>
    <string name="preference_content_font_color_summary">設定新聞內文的文字顏色</string>
    <string name="preference_content_bg_color">設定背景顏色</string>
    <string name="preference_content_bg_color_summary">設定新聞內文的背景顏色 (顏色設置為黑或灰色，APP重啟後自動進入暗黑模式)</string>
    <string name="preference_content_smartsave">開啟智能節費模式</string>
    <string name="preference_content_smartsave_summary">根據連線類型(wifi/行動網路)自動啟動/關閉圖片下載功能</string>
    <string name="preference_testing_group">實驗功能</string>
    <string name="preference_others_group">其他功能</string>
    <string name="preference_others_defaulttab">自訂首頁</string>
    <string name="preference_others_defaulttab_summary">設定開啟應用程式後進入的頁籤</string>


    <!-- Error -->
    <string name="network_error">無法連線，請檢查裝置是否正常連網</string>
    <string name="data_error">網路錯誤，請檢查裝置是否正常連網</string>
    <string name="no_data">沒有資料</string>
    <string name="parsing_error_transfer">新聞內容解析異常，即將載入原始新聞網頁</string>

    <!-- Welcome -->
    <string name="changelog_title">更新記錄</string>
    <string name="welcome_title">歡迎</string>
    <string name="welcome_message">歡迎使用華文News，超好用的新聞閱讀器\n\n建議使用wifi，以獲得最佳瀏覽速度。
    \n\n請按下方的設定按鈕，自訂最佳的瀏覽狀態。
    </string>
    <string name="close">關閉</string>

</resources>
